package System;

public class SistemaImpl {
}
